<resources>
    <string name="app_name">Testtricount</string>
    <string name="valider">Valider</string>
    <string name="titre">Titre</string>
    <string name="description">Description</string>
    <string name="votre_nom">Votre nom</string>
    <string name="ajouter">Ajouter</string>
    <string name="participants_0_50">Participants (0/50)</string>
    <string name="tricount">Tricount</string>
    <string name="desciption">Desciption</string>

    <string-array name="spinnerDevise">
        <item>EUR</item>
        <item>USD</item>
        <item>CNY</item>
    </string-array>
    <string name="title_activity_new_tricount">NewTricount</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>